--- a/PonzianiComponents/Chessboard.razor.css
+++ b/PonzianiComponents/Chessboard.razor.css
@@ -1,6 +1,102 @@
-﻿.my-component {
-    border: 2px dashed red;
-    padding: 1em;
-    margin: 1em 0;
-    background-image: url('background.png');
+﻿.pzBoard {
+    border: 2px solid #404040;
+    box-sizing: border-box;
+}
+
+.pzBoardRow {
+}
+
+.pzSquare {
+    float: left;
+    position: relative;
+    /* disable any native browser highlighting */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.pzDarkSquare {
+    background-color: #b58863;
+    color: #f0d9b5;
+}
+
+.pzLightSquare {
+    background-color: #f0d9b5;
+    color: #b58863;
+}
+
+.pzDarkSquareGrey {
+    background-color: #696969;
+    color: #f0d9b5;
+}
+
+.pzLightSquareGrey {
+    background-color: #a9a9a9;
+    color: #b58863;
+}
+
+.pzClearfix {
+    clear: both;
+}
+
+.pzNotation {
+    cursor: default;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    position: absolute;
+}
+
+.pzAlpha {
+    bottom: 1px;
+    right: 3px;
+}
+
+.pzNumeric {
+    top: 2px;
+    left: 2px;
+}
+
+.pzPieceImage {
+}
+
+.pzSparePieces {
+}
+
+.pzHighlightSquare {
+    box-shadow: inset 0 0 3px 3px yellow;
+}
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 110px;
+    border-radius: 0.5rem;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+    display: block;
 }
