Test for Setup Mode

--- a/PonzianiComponents/Chessboard.razor
+++ b/PonzianiComponents/Chessboard.razor
@@ -19,7 +19,7 @@
 
 <div class="modal @clsShowModalSetup">
 	<div class="modal-content" style="width: 500px;">
-		<EditForm Model="addSI" OnValidSubmit="@HandleSetupSubmitAsync">
+		<EditForm Model="addSI" OnValidSubmit="@HandleSetupSubmitAsync" id="SetupDialog">
 		<div class="form-group row">
 			 <label for="setupSide"  class="col-sm-6 col-form-label">Side to Move</label>
 			 <div class="col-sm-6">
