--- a/PonzianiDemo/Shared/NavMenu.razor
+++ b/PonzianiDemo/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
 			</NavLink>
 		</li>
 		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="scoresheet">
+				<span class="oi oi-plus" aria-hidden="true"></span> Scoresheet
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
 			<NavLink class="nav-link" href="lichesstv">
 				<span class="oi oi-plus" aria-hidden="true"></span> Lichess TV
 			</NavLink>
