--- a/PonzianiDemo/Pages/ScoresheetDemo.razor
+++ b/PonzianiDemo/Pages/ScoresheetDemo.razor
@@ -1,12 +1,18 @@
 ﻿@page "/scoresheet"
 <h3>ScoresheetDemo</h3>
 
-<Scoresheet Game="@game" Height="@model.Height" OnMoveSelected="@OnMoveSelected"/>
+<Scoresheet Game="@game" Height="@model.Height" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode"/>
 
 <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit">
 	<div class="form-group">
 		<label for="taPGN">Enter PGN</label>
 		<InputTextArea class="form-control" id="taPGN" rows="10" @bind-Value="model.PGNText" />
+	</div>
+	<div class="form-check">
+		<InputCheckbox class="form-check-input" @bind-Value="model.InlineMode" />
+		<label>
+			Inline Mode:
+		</label>
 	</div>
 	<div class="form-group">
 		<label>
