--- a/PonzianiDemo/Pages/ScoresheetDemo.razor
+++ b/PonzianiDemo/Pages/ScoresheetDemo.razor
@@ -1,7 +1,7 @@
 ﻿@page "/scoresheet"
 <h3>ScoresheetDemo</h3>
 
-<Scoresheet Game="@game" Height="@model.Height" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode"/>
+<Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" OtherAttributes="@OtherAttributes"/>
 
 <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit">
 	<div class="form-group">
@@ -14,11 +14,11 @@
 			Inline Mode:
 		</label>
 	</div>
-	<div class="form-group">
+		<div class="form-group">
 		<label>
-			Height:
+			Other Attributes:
 		</label>
-		<InputNumber class="form-control" @bind-Value="model.Height" />
+		<InputText class="form-control" @bind-Value="model.OtherAttributes" />
 	</div>
 	<button type="submit">Submit</button>
 </EditForm>
