--- a/PonzianiComponents/Chessboard.razor.css
+++ b/PonzianiComponents/Chessboard.razor.css
@@ -1,5 +1,11 @@
 ﻿.pzChessboard {
+    width: 400px;
+    height: 400px;
+}
 
+.pzChessboardSetup {
+    width: 400px;
+    height: 500px;
 }
 
 .pzBoard {
