Add extended move info to scoresheet

--- a/PonzianiDemo/Pages/LichessTV.razor
+++ b/PonzianiDemo/Pages/LichessTV.razor
@@ -29,7 +29,7 @@
  </div>
  <div class="row justify-content-center">
   <Chessboard Fen="@Game.Position.FEN" @ref="chessboard" />
-  <Scoresheet Game="@Game" style="width: 400px; height: 400px; padding:5px" />
+  <Scoresheet Game="@Game" style="width: 400px; height: 400px; padding:5px" ExtendedMoveInfo="true"/>
  </div>
 </div>
 
