--- a/PonzianiComponents/Scoresheet.razor
+++ b/PonzianiComponents/Scoresheet.razor
@@ -65,8 +65,12 @@ else if (Mode == DisplayMode.INLINE)
 			{
 				<text>&#32;</text><span class="pzMoveText">@g.Position.MoveNumber.</span>
 			}
-			<text>&#32;</text><span class="pzMoveText" @onclick="@(e => SelectMoveAsync(e, moveNumber, side))">@Print(g, i)</span>
-			g.Add(Game.Moves[i]);
+			<text>&#32;</text><span class="pzMoveText" @onclick="@(e => SelectMoveAsync(e, moveNumber, side))">@Print(g, i)</span> 
+			@if (Comments && Game.Moves[i].Comment != null && Game.Moves[i].Comment.Length > 0)
+			{
+				<text>&#32;</text><span class="pzMoveTextComment">@Game.Moves[i].Comment</span> 
+			}
+	g.Add(Game.Moves[i]);
 		}
 	 <text>&#32;</text><span class="pzMoveText pzNotResult">@PGN.ResultToString(Game.Result)</span>
 	</div>
