--- a/PonzianiDemo/Pages/ScoresheetDemo.razor
+++ b/PonzianiDemo/Pages/ScoresheetDemo.razor
@@ -1,7 +1,7 @@
 ﻿@page "/scoresheet"
 <h3>ScoresheetDemo</h3>
 
-<Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" Type="@model.NotationType" OtherAttributes="@OtherAttributes" />
+<Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" Type="@model.NotationType" OtherAttributes="@OtherAttributes" Comments="@model.Comments" />
 
 <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit">
 	<div class="form-group">
@@ -12,6 +12,12 @@
 		<InputCheckbox class="form-check-input" @bind-Value="model.InlineMode" />
 		<label>
 			Inline Mode:
+		</label>
+	</div>
+	<div class="form-check">
+		<InputCheckbox class="form-check-input" @bind-Value="model.Comments" />
+		<label>
+			Show Comments:
 		</label>
 	</div>
 	<div class="form-group">
